--- a/templates/TypeProduits/WagonFret.html.twig
+++ b/templates/TypeProduits/WagonFret.html.twig
@@ -16,68 +16,86 @@
 <body>
     <h1>Les {{categorie.nom}} </h1>
     {% endfor %}
-    {% for pageproduit in TypeWagonFretBache %}
+            {% for ProduitG in BacheG %}
             <div class="ImagesLigne1">
                 <div class="WagonBacheG">
-                    <a href={{ path('produits_bacheG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleG }} alt="WagonBacheG" id="WagonBacheG"></a>
+                    <a href={{ path('produits_bacheG') }}> <img src={{ asset('Images/Produits/WagonFret/Bache/TailleG/') ~ ProduitG.LibelesTailles }} alt="WagonBacheG" id="WagonBacheG"></a>
                     <p>Wagon Bache taille G</p>
                 </div>
+                {% endfor %}
+                {% for ProduitN in BacheN %}
                 <div class="WagonBacheN">
-                    <a href={{ path('produits_bacheN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleN }} alt="WagonBacheN" id="WagonBacheN"></a>
+                    <a href={{ path('produits_bacheN') }}> <img src={{ asset('Images/Produits/WagonFret/Bache/TailleN/') ~ ProduitN.LibelesTailles }} alt="WagonBacheN" id="WagonBacheN"></a>
                     <p>Wagon Bache taille N</p>
                 </div>
+                {% endfor %}
+                {% for ProduitZ in BacheZ %}
                 <div class="WagonBacheZ">
-                    <a href={{ path('produits_bacheZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleZ }} alt="WagonBacheZ" id="WagonBacheZ"></a>
+                    <a href={{ path('produits_bacheZ') }}> <img src={{ asset('Images/Produits/WagonFret/Bache/TailleZ/') ~ ProduitZ.LibelesTailles }} alt="WagonBacheZ" id="WagonBacheZ"></a>
                     <p>Wagon Bache taille Z</p>
                 </div>
+                {% endfor %}
             </div>
+            {% for ProduitHO in BacheHO %}
             <div class="ImagesLigne2">
                 <div class="WagonBacheHO">
-                    <a href={{ path('produits_bacheHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Bache/') ~ pageproduit.tailleHo }} alt="WagonBacheHO" id="WagonBacheHO"></a>
+                    <a href={{ path('produits_bacheHO') }}> <img src={{ asset('Images/Produits/WagonFret/Bache/TailleHO/') ~ ProduitHO.LibelesTailles }} alt="WagonBacheHO" id="WagonBacheHO"></a>
                     <p>Wagon Bache taille HO</p>
                 </div>
                 {% endfor %}
-                {% for pageproduit in TypeWagonFretPlatRebord %}
+                {% for ProduitG in RebordG %}
                 <div class="WagonRebordG">
-                    <a href={{ path('produits_rebordG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleG }} alt="WagonRebordG" id="WagonRebordG"></a>
+                    <a href={{ path('produits_rebordG') }}> <img src={{ asset('Images/Produits/WagonFret/Rebord/TailleG/') ~ ProduitG.LibelesTailles }} alt="WagonRebordG" id="WagonRebordG"></a>
                     <p>Wagon Plat à Rebord en taille G</p>
                 </div>
+                {% endfor %}
+                {% for ProduitN in RebordN %}
                 <div class="WagonRebordN">
-                    <a href={{ path('produits_rebordN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleN }} alt="WagonRebordN" id="WagonRebordN"></a>
+                    <a href={{ path('produits_rebordN') }}> <img src={{ asset('Images/Produits/WagonFret/Rebord/TailleN/') ~ ProduitN.LibelesTailles }} alt="WagonRebordN" id="WagonRebordN"></a>
                     <p>Wagon Plat à Rebord en taille N</p>
                 </div>
+                {% endfor %}
             </div>
+            {% for ProduitZ in RebordZ %}
             <div class="ImagesLigne3">
                 <div class="WagonRebordZ">
-                    <a href={{ path('produits_rebordZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleZ }} alt="WagonRebordZ" id="WagonRebordZ"></a>
+                    <a href={{ path('produits_rebordZ') }}> <img src={{ asset('Images/Produits/WagonFret/Rebord/TailleZ/') ~ ProduitZ.LibelesTailles }} alt="WagonRebordZ" id="WagonRebordZ"></a>
                     <p>Wagon Plat à Rebord en taille Z</p>
                 </div>
+                {% endfor %}
+                {% for ProduitHO in RebordHO %}
                 <div class="WagonRebordHO">
-                    <a href={{ path('produits_rebordHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Rebord/') ~ pageproduit.tailleHo }} alt="WagonRebordHO" id="WagonRebordHO"></a>
+                    <a href={{ path('produits_rebordHO') }}> <img src={{ asset('Images/Produits/WagonFret/Rebord/TailleHO/') ~ ProduitHO.LibelesTailles }} alt="WagonRebordHO" id="WagonRebordHO"></a>
                     <p>Wagon Plat à Rebord en taille HO</p>
                 </div>
                 {% endfor %}
-                {% for pageproduit in TypeWagonsFretCouvert %}
+                {% for ProduitG in CouvertG %}
                 <div class="WagonCouvertG">
-                    <a href={{ path('produits_couvertG') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleG }} alt="WagonCouvertG" id="WagonCouvertG"></a>
+                    <a href={{ path('produits_couvertG') }}> <img src={{ asset('Images/Produits/WagonFret/Couvert/TailleG/') ~ ProduitG.LibelesTailles }} alt="WagonCouvertG" id="WagonCouvertG"></a>
                     <p>Wagon Couvert en taille G</p>
                 </div>
+                {% endfor %}
             </div>
+            {% for ProduitN in CouvertN %}
             <div class="ImagesLigne4">
                 <div class="WagonCouvertN">
-                    <a href={{ path('produits_couvertN') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleN }} alt="WagonCouvertN" id="WagonCouvertN"></a>
+                    <a href={{ path('produits_couvertN') }}> <img src={{ asset('Images/Produits/WagonFret/Couvert/TailleN/') ~ ProduitN.LibelesTailles }} alt="WagonCouvertN" id="WagonCouvertN"></a>
                     <p>Wagon Couvert en taille N</p>
                 </div>
+                {% endfor %}
+                {% for ProduitZ in CouvertZ %}
                 <div class="WagonCouvertZ">
-                    <a href={{ path('produits_couvertZ') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleZ }} alt="WagonCouvertZ" id="WagonCouvertZ"></a>
+                    <a href={{ path('produits_couvertZ') }}> <img src={{ asset('Images/Produits/WagonFret/Couvert/TailleZ/') ~ ProduitZ.LibelesTailles }} alt="WagonCouvertZ" id="WagonCouvertZ"></a>
                     <p>Wagon Couvert en taille Z</p>
                 </div>
+                {% endfor %}
+                {% for ProduitHO in CouvertHO %}
                 <div class="WagonCouvertHO">
-                    <a href={{ path('produits_couvertHO') }}> <img src={{ asset('Images/PageProduits/WagonFret/Couvert/') ~ pageproduit.tailleHo }} alt="WagonCouvertHO" id="WagonCouvertHO"></a>
+                    <a href={{ path('produits_couvertHO') }}> <img src={{ asset('Images/Produits/WagonFret/Couvert/TailleHO/') ~ ProduitHO.LibelesTailles }} alt="WagonCouvertHO" id="WagonCouvertHO"></a>
                     <p>Wagon Couvert en taille HO</p>
+                {% endfor %}
                 </div>
             </div>
-    {% endfor %}
 </body>
 
 </html>
