--- a/templates/TypeProduits/locomotives.html.twig
+++ b/templates/TypeProduits/locomotives.html.twig
@@ -16,68 +16,86 @@
 <body>
     <h1>Les {{categorie.nom}} </h1>
     {% endfor %}
-    {% for pageproduit in TypeLocoDiesel %}
+    {% for ProduitG in LocoDieselG %}
             <div class="ImagesLigne1">
                 <div class="LocoDieselG">
-                    <a href={{ path('produits_dieselG') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleG }} alt="Locomotivedieselg" id="LocoDieselG"></a>
+                    <a href={{ path('produits_dieselG') }}> <img src={{ asset('Images/Produits/Locomotives/Diesel/TailleG/') ~ ProduitG.LibelesTailles }} alt="Locomotivedieselg" id="LocoDieselG"></a>
                     <p>Locomotive diesel taille G</p>
                 </div>
+                {% endfor %}
+                {% for ProduitN in LocoDieselN %}
                 <div class="LocoDieselN">
-                    <a href={{ path('produits_dieselN') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleN }} alt="Locomotivedieseln" id="LocoDieselN"></a>
+                    <a href={{ path('produits_dieselN') }}> <img src={{ asset('Images/Produits/Locomotives/Diesel/TailleN/') ~ ProduitN.LibelesTailles }} alt="Locomotivedieseln" id="LocoDieselN"></a>
                     <p>Locomotive diesel taille N</p>
                 </div>
+                {% endfor %}
+                {% for ProduitZ in LocoDieselZ %}
                 <div class="LocoDieselZ">
-                    <a href={{ path('produits_dieselZ') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleZ }} alt="Locomotivedieselz" id="LocoDieselZ"></a>
+                    <a href={{ path('produits_dieselZ') }}> <img src={{ asset('Images/Produits/Locomotives/Diesel/TailleZ/') ~ ProduitZ.LibelesTailles }} alt="Locomotivedieselz" id="LocoDieselZ"></a>
                     <p>Locomotive diesel taille Z</p>
                 </div>
+                {% endfor %}
             </div>
+         {% for ProduitHO in LocoDieselHO %}
             <div class="ImagesLigne2">
                 <div class="LocoDieselHO">
-                    <a href={{ path('produits_dieselHO') }}> <img src={{ asset('Images/PageProduits/Locomotives/Diesel/') ~ pageproduit.tailleHo }} alt="Locomotivedieselho" id="LocoDieselHO"></a>
+                    <a href={{ path('produits_dieselHO') }}> <img src={{ asset('Images/Produits/Locomotives/Diesel/TailleHO/') ~ ProduitHO.LibelesTailles }} alt="Locomotivedieselho" id="LocoDieselHO"></a>
                     <p>Locomotive diesel taille HO</p>
-                </div>
-                {% endfor %}
-                {% for pageproduit in TypeLocoElec %}
+                </div> 
+                 {% endfor %}
+                {% for ProduitG in LocoElecG %}
                 <div class="LocoElecG">
-                    <a href={{ path('produits_ElecG') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleG }} alt="LocomotiveElecg" id="LocomotivesElec"></a>
+                    <a href={{ path('produits_ElecG') }}> <img src={{ asset('Images/Produits/Locomotives/Elec/TailleG/') ~ ProduitG.LibelesTailles }} alt="LocomotiveElecg" id="LocomotivesElec"></a>
                     <p>Locomotive Elec taille G</p>
                 </div>
+                {% endfor %}
+                {% for ProduitN in LocoElecN %}
                 <div class="LocoElecN">
-                    <a href={{ path('produits_ElecN') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleN }} alt="LocomotiveElecn" id="LocomotivesElec"></a>
+                    <a href={{ path('produits_ElecN') }}> <img src={{ asset('Images/Produits/Locomotives/Elec/TailleN/') ~ ProduitN.LibelesTailles }} alt="LocomotiveElecn" id="LocomotivesElec"></a>
                     <p>Locomotive Elec taille N</p>
                 </div>
+                {% endfor %}
             </div>
+            {% for ProduitZ in LocoElecZ %}
             <div class="ImagesLigne3">
                 <div class="LocoElecZ">
-                    <a href={{ path('produits_ElecZ') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleZ }} alt="LocomotiveElecz" id="LocomotivesElec"></a>
+                    <a href={{ path('produits_ElecZ') }}> <img src={{ asset('Images/Produits/Locomotives/Elec/TailleZ/') ~ ProduitZ.LibelesTailles }} alt="LocomotiveElecz" id="LocomotivesElec"></a>
                     <p>Locomotive Elec taille Z</p>
                 </div>
+                {% endfor %}
+                {% for ProduitHO in LocoElecHO %}
                 <div class="LocoElecHO">
-                    <a href={{ path('produits_ElecHO') }}> <img src={{ asset('Images/PageProduits/Locomotives/Elec/') ~ pageproduit.tailleHo }} alt="LocomotiveElecho" id="LocomotivesElec"></a>
+                    <a href={{ path('produits_ElecHO') }}> <img src={{ asset('Images/Produits/Locomotives/Elec/TailleHO/') ~ ProduitHO.LibelesTailles }} alt="LocomotiveElecho" id="LocomotivesElec"></a>
                     <p>Locomotive Elec taille HO</p>
                 </div>
                 {% endfor %}
-                {% for pageproduit in TypeLocoVapeur %}
+                {% for ProduitG in LocoVapeurG %}
                 <div class="LocoVapeurG">
-                    <a href={{ path('produits_VapeurG') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleG }} alt="LocomotiveVapeurg" id="LocomotivesVapeur"></a>
+                    <a href={{ path('produits_VapeurG') }}> <img src={{ asset('Images/Produits/Locomotives/Vapeur/TailleG/') ~ ProduitG.LibelesTailles }} alt="LocomotiveVapeurg" id="LocomotivesVapeur"></a>
                     <p>Locomotive vapeur taille G</p>
                 </div>
+                {% endfor %}
             </div>
+            {% for ProduitN in LocoVapeurN %}
             <div class="ImagesLigne4">
                 <div class="LocoVapeurN">
-                    <a href={{ path('produits_VapeurN') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleN }} alt="LocomotiveVapeurn" id="LocomotivesVapeur"></a>
+                    <a href={{ path('produits_VapeurN') }}> <img src={{ asset('Images/Produits/Locomotives/Vapeur/TailleN/') ~ ProduitN.LibelesTailles }} alt="LocomotiveVapeurn" id="LocomotivesVapeur"></a>
                     <p>Locomotive vapeur taille N</p>
                 </div>
+                {% endfor %}
+                {% for ProduitZ in LocoVapeurZ %}
                 <div class="LocoVapeurZ">
-                    <a href={{ path('produits_VapeurZ') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleZ }} alt="LocomotiveVapeurz" id="LocomotivesVapeur"></a>
+                    <a href={{ path('produits_VapeurZ') }}> <img src={{ asset('Images/Produits/Locomotives/Vapeur/TailleZ/') ~ ProduitZ.LibelesTailles }} alt="LocomotiveVapeurz" id="LocomotivesVapeur"></a>
                     <p>Locomotive vapeur taille Z</p>
                 </div>
+                {% endfor %}
+                {% for ProduitHO in LocoVapeurHO %}
                 <div class="LocoVapeurHO">
-                    <a href={{ path('produits_VapeurHO') }}> <img src={{ asset('Images/PageProduits/Locomotives/Vapeur/') ~ pageproduit.tailleHo }} alt="LocomotiveVapeurho" id="LocomotivesVapeur"></a>
+                    <a href={{ path('produits_VapeurHO') }}> <img src={{ asset('Images/Produits/Locomotives/Vapeur/TailleHO/') ~ ProduitHO.LibelesTailles }} alt="LocomotiveVapeurho" id="LocomotivesVapeur"></a>
                     <p>Locomotive vapeur taille HO</p>
                 </div>
+                {% endfor %}
             </div>
-    {% endfor %}
 </body>
 
 </html>
