--- a/templates/produits/Locos/Elec/ElecHO.html.twig
+++ b/templates/produits/Locos/Elec/ElecHO.html.twig
@@ -30,14 +30,10 @@
 								€
 							</p>
 							{% if app.user %}
-
-								<a href={{ path('app_ajoutpanier', {id: Produits.id} ) }}>Ajouter au panier</a>
-
-							{% else %}
-
-								<a>Connectez-vous pour ajouter cet article a votre panier</a> {# lien a mettre quand je m'occuperait de la page login => href={{ path('app_login') }} #}
-
-							{% endif %}
+							<a href={{ path('CompteUtilisateur_AjoutPanier', {id: Produits.id} ) }}>Ajouter au panier</a>
+						{% else %}
+							<a href={{ path('app_login') }}>Connectez-vous pour ajouter cet article a votre panier</a>
+						{% endif %}
 						</div>
 					</div>
 					<div class="descriptionHOElec">
