--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -42,10 +42,10 @@
           </li>
         {% elseif is_granted('ROLE_USER') %}
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Mon compte</a>
+            <a class="nav-link text-white" href={{path('CompteUtilisateur_moncompte')}}>Mon compte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Mon panier</a>
+            <a class="nav-link text-white" href={{path('CompteUtilisateur_Panier')}}>Mon panier</a> 
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href={{path('app_logout')}}>Déconnexion</a>
