--- a/templates/produits/Locos/Elec/ElecZ.html.twig
+++ b/templates/produits/Locos/Elec/ElecZ.html.twig
@@ -49,7 +49,7 @@
 						<p>
 							<span class="titre_description">Description du Produit :</span>
 							<br>
-							{{Produits.detail}}
+							{{Produits.description}}
 						</p>
 					</div>
 				{% endfor %}
