--- a/templates/produits/Voies/VoiesG.html.twig
+++ b/templates/produits/Voies/VoiesG.html.twig
@@ -41,7 +41,7 @@
 					<p>
 						<span class="titre_description">Description du Produit :</span>
 						<br>
-						{{Produits.detail}}
+						{{Produits.description}}
 					</p>
 				</div>
                 
