--- a/templates/produits/VoituresVoyageurs/VoituresVoyageursN.html.twig
+++ b/templates/produits/VoituresVoyageurs/VoituresVoyageursN.html.twig
@@ -52,7 +52,7 @@
 						<p>
 							<span class="titre_description">Description du Produit :</span>
 							<br>
-							{{Produits.detail}}
+							{{Produits.description}}
 						</p>
 					</div>
 				{% endfor %}
