Ajout de la boite de reception coter utilisateur, fonctionnement correcte de tous les formulaires, finalisation de l'espace compte utilisateur

--- a/public/CSS/Utilisateurs.css
+++ b/public/CSS/Utilisateurs.css
@@ -432,6 +432,7 @@ textarea {
             width: 13%;
             border: 5px solid black;
             margin-left: 2%;
+            margin-right: 3%;
         }
         .Droite p{
             margin-bottom: 10%;
