--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -32,10 +32,10 @@
       <ul class="navbar-nav mb-2 mb-lg-0">
         {% if is_granted('ROLE_ADMIN') %}
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Liste des utilisateurs</a>
+            <a class="nav-link text-white" href={{path('Administrateur_EspaceAdmin')}}>Espace Administrateur</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Liste des produits</a>
+            {# <a class="nav-link text-white" href="#">Liste des produits</a> #}
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href={{path('app_logout')}}>Déconnexion</a>
