Ajout de la gestion de produit coter admin

--- a/templates/administrateur/EspaceAdmin.html.twig
+++ b/templates/administrateur/EspaceAdmin.html.twig
@@ -21,8 +21,8 @@
         </div>
         
         <div class="Liste des Produits"> {# Liste des produits, mettre une gestion de stock dedans #}
-            {# <a href={{ path('Administrateur_ListeProduits') }}><img src={{ asset('Images/MonCompte/Retractation.png') }} alt="Formulaire de Retractation" id="Retractation"></a> #}
-            {# <p>Liste des produits</p> #}
+            <a href={{ path('Administrateur_ListeProduits') }}><img src={{ asset('Images/MonCompte/Retractation.png') }} alt="Formulaire de Retractation" id="Retractation"></a>
+            <p>Liste des produits</p>
         </div>
 
     </div>
