--- a/templates/administrateur/BoiteReception/NouveauMessage.html.twig
+++ b/templates/administrateur/BoiteReception/NouveauMessage.html.twig
@@ -4,9 +4,11 @@
     <h1>Envoyer un message à un utilisateur</h1>
 
     {{ form_start(form) }}
-        {{ form_row(form.sujet) }}
-        {{ form_row(form.contenu) }}
+        {{ form_row(form.objet) }}
+        {{ form_row(form.description) }}
         {{ form_row(form.destinataire) }}
+        {{ form_row(form.pieceJointe) }}
         <button class="btn btn-primary">Envoyer</button>
+        <a href="{{ path('CompteUtilisateur_BoiteReception') }}" class="btn btn-outline-secondary">Retour</a>
     {{ form_end(form) }}
 {% endblock %}
