--- a/templates/administrateur/EspaceAdmin.html.twig
+++ b/templates/administrateur/EspaceAdmin.html.twig
@@ -28,12 +28,12 @@
     </div>
 
         <div class="AdminBas">
-            {# <div class="HistoriqueCommandeUtilisateurs"> Historique de commandes Utilisateurs #}
-            {# <a href={{ path('Administrateur_HistoriqueCommandeUtilisateur') }}><img src={{ asset('Images/MonCompte/HistoriqueCommande.png') }} alt="Historique des commandes" id="Historique"></a> #}
+            <div class="HistoriqueCommandeUtilisateurs"> {# Historique de commandes Utilisateurs #}
+            <a href={{ path('admin_commandes') }}><img src={{ asset('Images/MonCompte/HistoriqueCommande.png') }} alt="Historique des commandes" id="Historique"></a>
                 <p>Historique des commandes des utilisateurs</p>
             </div>
             <div class="BoiteReceptionAdmin"> {# Boite de reception #}
-            {# <a href={{ path('CompteUtilisateur_BoiteReception') }}><img src={{ asset('Images/MonCompte/BoiteReception.png') }} alt="Boite de Reception" id="Reception"></a> #}
+            <a href={{ path('CompteUtilisateur_BoiteReception') }}><img src={{ asset('Images/MonCompte/BoiteReception.png') }} alt="Boite de Reception" id="Reception"></a>
             <p>Boite de reception</p>
             </div>
         </div>
