--- a/templates/compte_utilisateur/BoiteReception/BoiteReception.html.twig
+++ b/templates/compte_utilisateur/BoiteReception/BoiteReception.html.twig
@@ -3,18 +3,56 @@
 {% block title %}Boîte de réception{% endblock %}
 
 {% block body %}
-<div class="container mt-4">
-    <h2 class="mb-4">📩 Boîte de réception</h2>
+<div class="">
+    <h2 class=""> Boîte de réception</h2>
 
-    <ul class="list-group">
-        <li class="list-group-item">
+{% if is_granted('ROLE_ADMIN') %}
+        <div class='Droite'>
+            <div class="ListeUtilisateurs">
+                <a href={{ path('CompteUtilisateur_infosPersos') }}>Liste des Utilisateurs</a>
+            </div>
+            <div class="ListeProduits">
+                <a href="#">Liste des produits</a>
+            </div>
+            <div class="HistoriqueCommandes">
+                <a href={{ path('CompteUtilisateur_HistoriqueCommande') }}>Historique des Commandes des utilisateurs</a>
+            </div>
+            <div class="BoiteReception">
+                <a href={{ path('CompteUtilisateur_BoiteReception') }}>Boite de Reception</a>
+            </div>
+        </div> {# Fin div Droite #}
+        {% elseif is_granted('ROLE_USER') %}
+
+        <div class='Droite'>
+            <div class="infosPersos">
+                <a href={{ path('CompteUtilisateur_infosPersos') }}>Mes Informations Personnelles</a>
+            </div>
+            <div class="Retour">
+                <a href="#">Formulaire de retour</a>
+            </div>
+            <div class="Livraison">
+                <a href={{ path('CompteUtilisateur_HistoriqueCommande') }}>Historique de vos Commandes</a>
+            </div>
+            <div class="remboursement">
+                <a href={{ path('CompteUtilisateur_BoiteReception') }}>Boite de Reception</a>
+            </div>
+        </div> {# Fin div Droite #}
+{% endif %}
+
+
+    <ul class="">
+        <li class="">
             <a href="{{ path('CompteUtilisateur_BoiteReceptionMesssageRecus') }}">Messages reçus</a>
         </li>
-        <li class="list-group-item">
+        <li class="">
             <a href="{{ path('messages_sent') }}">Messages envoyés</a>
         </li>
-        <li class="list-group-item">
-            <a href="{{ path('messages_new') }}">Nouveau message</a>
+         <li class="">
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('Administrateur_EnvoyerMessage') }}">Nouveau message ADMIN</a>
+            {% elseif is_granted('ROLE_USER') %}
+                <a href="{{ path('messages_new') }}">Nouveau message</a>
+            {% endif %}
         </li>
     </ul>
 </div>
