--- a/templates/administrateur/GestionUtilisateurs/HistoriqueCommandesUtilisateurs.html.twig
+++ b/templates/administrateur/GestionUtilisateurs/HistoriqueCommandesUtilisateurs.html.twig
@@ -3,7 +3,26 @@
 {% block title %}Historique des commandes{% endblock %}
 
 {% block body %}
+ <link rel="stylesheet" href={{ asset('CSS/Admin.css') }}>
     <h1>📦 Historique des commandes</h1>
+
+<div class='Droite'>
+            <div class="ListeUtilisateurs">
+                <a href={{ path('Administrateur_ListeUtilisateurs') }}>Liste des Utilisateurs</a>
+            </div>
+            <div class="ListeProduits">
+                <a href={{ path('Administrateur_ListeProduits') }}>Liste des produits</a>
+            </div>
+            <div class="HistoriqueCommandes">
+                <a href="#">Historique des Commandes des utilisateurs</a>
+            </div>
+            <div class="BoiteReception">
+                <a href={{ path('Administrateur_BoiteReception') }}>Boite de Reception</a>
+            </div>
+        </div> {# Fin div Droite #}
+
+
+
 
     <table class="table table-striped">
         <thead>
