--- a/templates/administrateur/GestionUtilisateurs/ListeUtilisateurs.html.twig
+++ b/templates/administrateur/GestionUtilisateurs/ListeUtilisateurs.html.twig
@@ -2,9 +2,23 @@
 {% extends 'base.html.twig' %}
 {% block title %}Liste des Utilisateurs{% endblock %}
 {% block body %}
-    <link rel="stylesheet" href={{ asset('/CSS/ListeUser.css') }}>
+    <link rel="stylesheet" href={{ asset('CSS/Admin.css') }}>
     <h1>Liste des Utilisateurs</h1>
 
+<div class='Droite'>
+            <div class="ListeUtilisateurs">
+                <a href="#">Liste des Utilisateurs</a>
+            </div>
+            <div class="ListeProduits">
+                <a href={{ path('Administrateur_ListeProduits') }}>Liste des produits</a>
+            </div>
+            <div class="HistoriqueCommandes">
+                <a href={{ path('Administrateur_HistoriquesCommandesUtilisateurs') }}>Historique des Commandes des utilisateurs</a>
+            </div>
+            <div class="BoiteReception">
+                <a href={{ path('Administrateur_BoiteReception') }}>Boite de Reception</a>
+            </div>
+        </div> {# Fin div Droite #}
     <table class="liste_utilisateurs">
         <thead>
             <tr>
